Bugfixes, Feature updates and many more
- Local Records are stored with the Gamemodes in which the record was
made, so that a Local Record made in TimeAttack is not shown in Rounds

- To update your database structure, use
http://www.uaseco.org/downloads/2015-05-04-update.sql for a manual
update with PhpMyAdmin or similar.
     To use the 2015-05-04-update.sql
you need to replace all %prefix% with your setup in config/UASECO.xml at
<mysql><table_prefix> and
     replace all %gamemode% with one of the
list in newinstall/database/readme.txt.

 - plugin.autotime.php handles
now the Gamemodes: TimeAttack, Laps, TeamAttack and Chase

 -
plugin.checkpoint.php
   - Fixed checkpoint handling in Gamemode
Rounds.Script.txt and Laps.Script.txt

 - plugin.dedimania.php
   -
Record storing fixed in Gamemode Rounds.Script.txt

 -
plugin.tachometer.php
   - Bugfix overlay with
<personal_best_and_rank>

 - plugin.info_bar.php
   - Forgotten to
disable <personal_best_and_rank>, fixed

 - plugin.records_eyepiece.php

- Fixed RoundScoreWidget and warm-up does not display the correct state
(thanks BusardCendre)
   - Fixed LiveRankingsWidget in Laps.Script.txt

- Added MultilapInfoWidget
   - Added WarmUpInfoWidget

 -
plugin.modescript_handler.php
   - Fixed several things related to the
checkpoint handling

 - Updated XAseco2 database converter

--- a/docs/CHANGELOG.txt
+++ b/docs/CHANGELOG.txt
@@ -48,6 +48,7 @@ Version 1.0.0
    - Renamed several Plugins
    - Included the updated "GBX Data Fetcher module" v2.8 from 2014-07-12 created by Xymph
    - Added new GbxRemote from 2015-01-24 from https://github.com/NewboO/dedicated-server-api/
+   - Distinguish local records between Gamemodes
 
 
    Bugfix (in XAseco2)
