--- a/docs/TODO.txt
+++ b/docs/TODO.txt
@@ -24,8 +24,6 @@ RMB-Menu
 	"/admin pass"
 	"/admin cancel"
 	"/admin players live"
-
-
 + AddFavorite
 
 http://doc.maniaplanet.com/creation/manialink/actions.html
@@ -50,19 +48,13 @@ ManiaKarma
 
 Records-Eyepiece
 ~~~~~~~~~~~~~~~~
- - CheckpointWidget: In multilap Maps reset the text "Finished, next Lap!" after about 4-5 sec. to the Checkpoint count
+ - SpectatorInfoWidget
+  -> https://forum.maniaplanet.com/viewtopic.php?f=279&t=30986
+  -> https://forum.maniaplanet.com/viewtopic.php?f=279&t=29227
+
  - Player marker from Players behind current should be "grey" instead of red
- - Add possibilities for <background_color> at <checkpointcount_widget>, <donation_widget>
+ - Add possibilities for <background_color> at <checkpointcount_widget>
  - Remove <ladderlimit_widget>, <gamemode_widget>, <player_spectator_widget>, <current_ranking_widget>
- - Change F7 for toggle widgets
- - Do not send <quad...> when "BgEmpty" is used
- - BUG: After juke a song, the next/prev page buttons does not work
-
-
-
-VoteManager
-~~~~~~~~~~~
- - VoteManager should be able to know if the current map was juked from a player and the do not allow a skip vote. (Thanks jaga01)
 
 
 
