--- a/newinstall/locales/chat.admin.xml
+++ b/newinstall/locales/chat.admin.xml
@@ -671,10 +671,10 @@
 		<de>{#server}» {#admin}{1}$z$s {#highlite}{2}$z$s{#admin} hat Geistspieler {#highlite}{3}$z$s{#admin} entfernt!</de>
 	</message_kick_ghost>
 
-	<message_ban_masteradmin>
+	<message_ban_any_admin>
 		<en>{#server}» {#admin}MasterAdmins can not be banned!</en>
 		<de>{#server}» {#admin}MasterAdmins können nicht gesperrt werden!</de>
-	</message_ban_masteradmin>
+	</message_ban_any_admin>
 
 	<message_ban>
 		<en>{#server}» {#admin}{1}$z$s {#highlite}{2}$z$s{#admin} bans {#highlite}{3}$z$s{#admin}!</en>
