--- a/newinstall/locales/plugin.round_autoend.xml
+++ b/newinstall/locales/plugin.round_autoend.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes" ?>
 <locales>
 	<!--
-	Version:	2017-05-28
+	Version:	2018-04-21
 	Authors:	[EN] undef.de
 			[DE] undef.de
 	//-->
@@ -20,4 +20,9 @@
 		<en>{#server}» Round automatically ended after {#highlite}{1}{#server}</en>
 		<de>{#server}» Runde endete automatisch nach {#highlite}{1}{#server}</de>
 	</message_round_end>
+
+	<message_warmup_round_end>
+		<en>{#server}» WarmUp-Round automatically ended after {#highlite}{1}{#server}</en>
+		<de>{#server}» Aufwärmrunde endete automatisch nach {#highlite}{1}{#server}</de>
+	</message_warmup_round_end>
 </locales>
